--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible"	content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>HMeneceurporfolio</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" type="text/css" href="accueil.css">
 		<link rel="icon" href="img/tenor.png" size="16x16">
