--- a/infos.html
+++ b/infos.html
@@ -17,7 +17,7 @@
 		<a href="#" class="logo">Port<span class="folio">folio</span></a>
 				<nav>
 				<ul>
-					<li><a href="accueil.html">ACCUEIL</a></li>
+					<li><a href="index.html">ACCUEIL</a></li>
 					<li><a href="photo.html">PHOTO</a></li>
 					<li><a href="infos.html">INFOS</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
