--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,7 @@
 				<nav>
 				<ul>
 					<li><a href="index.html">ACCUEIL</a></li>
-					<li><a href="#">PHOTO</a></li>
+					<li><a href="photo.html">PHOTO</a></li>
 					<li><a href="infos.html">INFOS</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
