--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			loop: true,
 			fadeOut: true,
 			fadeOutClass: 'typed-fade-out',
-			fadeOutDelay: 500
+			fadeOutDelay: 500,
 		})
 	</script>
 
