--- a/photo.html
+++ b/photo.html
@@ -34,7 +34,7 @@
 		<h1>Ma passion</h1>
 		<p>L'essentiel<br>
 		Pour réussir à se perfectionner</p>
-		<button type="button-pic"><a href="https://www.w3schools.com/">recherche</button>
+		<button type="button-pic"><a href="https://www.w3schools.com/">recherche</a></button>
 		</div>
 		<div class="col">
 			<div class="card card1">
