--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<h1>Hamza MENECEUR, développeur <span class="auto-typing"></h1>
 		<p>créatif est motivé<br>
 		n'hésité pas à faire un tour dans mon espace <br>
-		Bon visionage</p>
+		Bon visionage!</p>
 		</div>
 		</div>
 		<footer>
